Add displaying question list and daily questions

--- a/quest/templates/quest/common/list_answers.html
+++ b/quest/templates/quest/common/list_answers.html
@@ -8,13 +8,13 @@
                     <span class="badge badge-pill badge-success">Accepted</span>
                 {% endif %}
                 {% if answer.accepted and reject_form %}
-                    <form method="post" action="{% url "qanda:update_answer_acceptance" pk=answer.id %}">
+                    <form method="post" action="#">
                         {% csrf_token %}
                         {{ reject_form }}
                         <button class="btn btn-link" type="submit"><i class="fa fa-times" aria-hidden="true"></i>Reject</button>
                     </form>
                 {% elif accept_form %}
-                    <form method="post" action="{% url "qanda:update_answer_acceptance" pk=answer.id %}">
+                    <form method="post" action="#">
                         {% csrf_token %}
                         {{ accept_form }}
                         <button class="btn btn-link" type="submit" title="Accept answer">
