--- a/quest/templates/quest/common/post_answer.html
+++ b/quest/templates/quest/common/post_answer.html
@@ -2,7 +2,7 @@
 
 <div class="col-sm-12">
     <h3>Post your answer</h3>
-    <form method="post" action="{% url "qanda:answer_question" pk=question.id %}">
+    <form method="post" action="#">
         {{ answer_form|crispy }}
         {% csrf_token %}
         <button class="btn btn-primary" type="submit" name="action" value="PREVIEW">Preview</button>
