--- a/templates/base.html
+++ b/templates/base.html
@@ -18,13 +18,13 @@
     <div class="container">
         <a href="/" class="navbar-brand">AvocaTo</a>
         <div class="navbar-nav">
-            <a href="#" class="nav-item nav-link">Ask</a>
-            <a href="#" class="nav-item nav-link">Today's Questions</a>
+            <a href="{% url 'quest:ask' %}" class="nav-item nav-link">Ask</a>
+            <a href="{% url 'quest:index' %}" class="nav-item nav-link">Today's Questions</a>
             {% if user.is_authenticated %}
-                <a href="#" class="nav-item nav-link">Logout</a>
+                <a href="{% url 'users:logout' %}" class="nav-item nav-link">Logout</a>
             {% else %}
-                <a href="#" class="nav-item nav-link">Login</a>
-                <a href="#" class="nav-item nav-link">Register</a>
+                <a href="{% url 'users:login' %}" class="nav-item nav-link">Login</a>
+                <a href="{% url 'users:register' %}" class="nav-item nav-link">Register</a>
             {% endif %}
         </div>
     </div>
